# gtp_ros_msgs

./: CMakeLists.txt  package.xml
action/: Plan.action
msg/: ActionId.msg  Obj.msg  PlanRequest.msg  PlanResponse.msg  Point.msg  Role.msg  SubSolution.msg
srv/: GetDetails.srv  PublishTraj.srv  SetAttachment.srv  SetAttachmentFromTask.srv
