<?xml version="1.0"?>
<package>
  <name>gtp_ros_msgs</name>
  <version>0.0.0</version>
  <description>The gtp_ros_msgs package</description>

  <maintainer email="jules.waldhart@laas.fr">Jules Waldhart</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/gtp_ros_msgs</url> -->


  <author email="jules.waldhart@laas.fr">Jules Waldhart</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>toaster_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>toaster_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
